# collab

./: Cargo.toml  README.md
context_attribute/: Cargo.toml
context_attribute/src/: lib.rs
context_attribute/tests/: basic.rs
plugin/: emacs.el
plugin/emacs/: bootstrap.el  bootstrap.sh  collab.el
src/: attach.rs  cli.rs  collabignore.rs  common.rs  fs_watcher.rs  ipc.rs  main.rs  tcp.rs
test_common/: Cargo.toml
test_common/src/: common.rs  file_node.rs  files.rs  lib.rs  rig.rs  util.rs
tests/: attach.rs  ignore.rs  main.rs
