[package]
name = "collab"
version = "0.1.0"
authors = ["Will Smith <wds68@cornell.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
serde = { version = "1.0.114", features = ["derive"] }
notify = "4.0.15"
