[package]
name = "collab"
version = "0.1.0"
authors = ["Will Smith <wds68@cornell.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
clap = "2"
notify = "4"
ctrlc = { version = "3", features = ["termination"] }
