[package]
name = "collab"
version = "0.1.0"
authors = ["Will Smith <wds68@cornell.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1.0"
clap = "2"
notify = "4"
ctrlc = { version = "3", features = ["termination"] }
ignore = "0.4"
csv = "1"
relative-path = { version = "1", features = ["serde"]  }
libc = "0.2"

[dev-dependencies]
test_common = { path = "test_common" }
tempdir = "0.3"
assert_cmd = "2.0.0"
