[package]
name = "context_attribute"
version = "0.1.0"
authors = ["Will Smith <wds68@cornell.edu>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
quote = "1"
syn = { version = "1", features = ["full", "extra-traits"] }

[dev-dependencies]
thiserror = "1"
anyhow = "1"
